--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -6,8 +6,8 @@
 
     server_name ask-away.mechanicalturk.one;
 
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
+    listen [::]:443 ssl http2 ipv6only=on; # managed by Certbot
+    listen 443 ssl http2; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/ask-away.mechanicalturk.one-0001/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/ask-away.mechanicalturk.one-0001/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
