enabled text compression in nginx config; preloading /create-account and /sign-in; changed button color in /games for accessibility;

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,4 +1,8 @@
   server {
+    gzip on;
+    gzip_types text/plain text/html text/css text/javascript  application/xml application/x-javascript application/font-woff2;
+    gzip_proxied any;
+
       location / {
         proxy_pass http://localhost:8081;
         proxy_set_header X-Real-IP $remote_addr;
